# aws-resource-tagger

./: .gitignore  README.md  app.py  pyproject.toml
lambda/: auto_tag.py
stacks/: autotags_stack.py
